Responsive issue with accordion container on mobile screen fixed.

--- a/quickstart/templates/tpl_jdseattle/css/com_sellacious/accordion.css
+++ b/quickstart/templates/tpl_jdseattle/css/com_sellacious/accordion.css
@@ -3,6 +3,12 @@
 	margin: 0 auto;
 }
 
+@media only screen and (max-width: 768px) {
+	#profile_accordion {
+		width: 95%;
+	}
+}
+
 .accordion-group {
 	position: relative;
 	display: -ms-flexbox;
